--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap');
 
 
@@ -9,25 +8,26 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     background: #0a0334;
-    height: 100vh;
+    height: 2536px;
 }
 
-.container{
+.container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 70vh;
 }
 
-.containerTitle{
+.containerTitle {
     height: 18rem;
     overflow-y: hidden;
     align-items: center;
 }
 
-.bigTitle{
+.bigTitle {
     font-family: 'Lato', sans-serif;
     font-size: clamp(2rem, 10vw, 7rem);
     font-weight: bold;
@@ -46,14 +46,32 @@ body{
     from {
         transform: translateY(18rem);
     }
+
     to {
         transform: translateY(0);
     }
 }
 
-.button{
-    position: absolute;
-    left: 50%;
-    top: 80%;
+.container .button {
+    display: flex;
+    justify-content: flex-end;
 }
 
+
+.header {
+    display: flex;
+    height: 10vh;
+    width: 100%;
+    position: fixed;
+}
+
+.header img {
+    max-width: 100%;
+    height: 50%;
+}
+
+.footer {
+    display: flex;
+    height: 20vh;
+    position: fixed;
+}
