--- a/style.css
+++ b/style.css
@@ -13,6 +13,17 @@
     box-sizing: border-box;
 }
 
+.header {
+    display: flex;
+    height: 10vh;
+    width: 100%;
+    position: fixed;
+}
+
+.header img {
+    max-width: 100%;
+    height: 50%;
+}
 
 
 
@@ -23,13 +34,6 @@
     align-items: center;
     height: 70vh;
 }
-
-header {
-    position: fixed;
-    background: red;
-    width: 100%;
-}
-
 
 
 
@@ -75,10 +79,7 @@ header {
     }
 }
 
-.container .button {
-    display: flex;
-    justify-content: flex-end;
-}
+
 
 .button1 {
     position: absolute;
@@ -87,7 +88,7 @@ header {
 }
 
 .button1 img {
-    width: 25em;
+    width: 15em;
 }
 
 .image1 {
@@ -97,7 +98,7 @@ header {
 }
 
 .image1 img {
-    width: 5em;
+    display: none;
 }
 
 .image2 {
@@ -107,25 +108,7 @@ header {
 }
 
 .image2 img {
-    width: 7em;
-}
-
-@media screen and (max-width: 390px) {
-    .container {
-        margin-top: 8em;
-    }
-
-    .button1 img {
-        width: 15em;
-    }
-
-    .image1 img {
-        display: none;
-    }
-
-    .image2 img {
-        display: none;
-    }
+    display: none;
 }
 
 
@@ -136,16 +119,19 @@ header {
 
 .bigContainer {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 15em;
+    flex-direction: column;
 
+}
+
+.reglement {
+    width: 30%;
+    margin-left: 3em;
 }
 
 .containerTeam {
     display: flex;
-    justify-content: center;
-    gap: 10em;
+    flex-direction: column;
+
 }
 
 .containerTeam1 {
@@ -167,26 +153,55 @@ header {
     width: 5em;
 }
 
-.reglement {
-    width: 30%;
-    margin-left: 3em;
-}
 
 
-.header {
+
+.container .button {
     display: flex;
-    height: 10vh;
-    width: 100%;
-    position: fixed;
-}
-
-.header img {
-    max-width: 100%;
-    height: 50%;
+    justify-content: flex-end;
 }
 
 .footer {
-    display: flex;
-    height: 20vh;
     position: fixed;
+    bottom: 0;
+    background-color: red;
+}
+
+
+
+@media screen and (min-width: 768px) {
+
+
+    .button1 img {
+        width: 25em;
+
+    }
+
+    .image1 img {
+        width: 5em;
+        display: block;
+    }
+
+    .image2 img {
+        width: 7em;
+        display: block;
+    }
+
+    .bigContainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 15em;
+
+
+    }
+
+    .containerTeam {
+        display: flex;
+        justify-content: center;
+        gap: 10em;
+        flex-direction: row;
+
+    }
 }
