--- a/style.css
+++ b/style.css
@@ -32,23 +32,20 @@
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    height: 70vh;
-}
-
-
-
-
-.container {
     background: var(--primary);
-    display: flex;
-    justify-content: center;
     height: 100vh;
 }
+
+
+
+
+
 
 .containerTitle {
     height: 18rem;
     overflow-y: hidden;
     align-items: center;
+    margin-top: 6em;
 }
 
 
@@ -204,4 +201,6 @@
         flex-direction: row;
 
     }
+
+
 }
