--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap');
 
-:root{
-    --primary: #131734; 
+:root {
+    --primary: #131734;
     --secondary: #fff;
 }
 
@@ -21,14 +20,14 @@ header {
 }
 
 
-.container{
+.container {
     background: var(--primary);
     display: flex;
     justify-content: center;
     height: 100vh;
 }
 
-.containerTitle{
+.containerTitle {
     height: 18rem;
     overflow-y: hidden;
     align-items: center;
@@ -36,7 +35,7 @@ header {
 
 
 
-.bigTitle{
+.bigTitle {
     font-family: 'Lato', sans-serif;
     font-size: clamp(3rem, 10vw, 7rem);
     font-weight: bold;
@@ -50,103 +49,212 @@ header {
     text-align: center;
 }
 
-
-
 @keyframes up {
     from {
         transform: translateY(18rem);
     }
+
     to {
         transform: translateY(0);
     }
 }
 
-.button1{
+.button1 {
     position: absolute;
     left: center;
     top: 60%;
 }
 
-.button1 img{
+.button1 img {
     width: 25em;
 }
 
-.image1{
+.image1 {
     position: absolute;
     left: 10%;
     top: 40%;
 }
 
-.image1 img{
+.image1 img {
     width: 5em;
 }
 
-.image2{
+.image2 {
     position: absolute;
     right: 10%;
     top: 40%;
 }
 
-.image2 img{
+.image2 img {
     width: 7em;
 }
 
-@media screen and  (max-width: 390px){
-    .container{
-        margin-top: 8em;
-    }
-    .button1 img{
-        width: 15em;
-    }
-    .image1 img{
-        display: none;
-    }
-    .image2 img{
-        display: none;
-    }
-}
 
-
-.team{
+.team {
     display: flex;
     height: 100vh;
 }
 
-.bigContainer{
+.bigContainer {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 15em;
-    
+
 }
 
-.containerTeam{
+.reglement {
+    width: 30%;
+    margin-left: 3em;
+}
+
+.containerTeam {
     display: flex;
     justify-content: center;
     gap: 10em;
 }
 
-.containerTeam1{
+
+.containerTeam1 {
     display: flex;
     flex-direction: column;
     text-align: center;
     gap: 3em;
 }
 
-.containerTeam2{
+.containerTeam2 {
     display: flex;
     flex-direction: column;
     text-align: center;
     gap: 3em;
 }
 
-.containerTeam2 img{
+.containerTeam2 img {
     margin: 0 auto;
     width: 5em;
 }
 
-.reglement{
-    width: 30%;
-    margin-left: 3em;
+.quizz1 {
+    height: 500px;
+    padding: 50px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgb(255, 0, 0);
 }
 
+
+.question {
+    max-width: 100%;
+    /* display: none; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    text-align: center;
+}
+
+.stringQuestion {
+    border-radius: 50% 20% / 10% 40%;
+    background-color: rgb(228, 19, 200);
+    padding: 10px;
+    margin: 10px;
+}
+
+.fullAnswer {
+    display: grid;
+    /* align-items: center; */
+    /* justify-content: center;
+    flex-direction: column; */
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    /* grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr; */
+    border: 1px solid rgb(0, 252, 13);
+    text-align: center;
+}
+
+.wrongAnswer {
+    padding: 50px;
+    margin: 10px;
+    border-radius: 50% 20% / 10% 40%;
+    background-color: rgb(0, 26, 255);
+}
+
+.rightAnswer {
+    padding: 50px;
+    margin: 10px;
+    border-radius: 50% 20% / 10% 40%;
+    background-color: rgb(0, 26, 255);
+}
+
+.cont-btn {
+    width: 50%;
+    height: auto;
+    border: 1px solid #000;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+}
+
+.btn-nav {
+    font-size: 50px;
+    margin: 0 15px;
+    cursor: pointer;
+}
+
+.button {
+    margin-top: 50px;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    background: red;
+}
+
+@media screen and (min-width: 500px) {
+    .container {
+        margin-top: 8em;
+    }
+
+    .button1 img {
+        width: 15em;
+    }
+
+    .image1 img {
+        display: none;
+    }
+
+    .image2 img {
+        display: none;
+    }
+
+    .fullAnswer {
+        display: grid;
+        /* align-items: center; */
+        /* justify-content: center;
+        flex-direction: column; */
+        /* grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr); */
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        border: 1px solid rgb(0, 252, 13);
+        text-align: center;
+        /* padding: 50px; */
+    }
+
+    .wrongAnswer {
+        padding: 50px;
+        margin: 10px;
+        border-radius: 50% 20% / 10% 40%;
+        background-color: rgb(0, 26, 255);
+    }
+
+    .rightAnswer {
+        padding: 50px;
+        margin: 10px;
+        border-radius: 50% 20% / 10% 40%;
+        background-color: rgb(0, 26, 255);
+    }
+}
