--- a/style.css
+++ b/style.css
@@ -123,51 +123,6 @@ header {
     display: none;
 }
 
-
-.team {
-    display: flex;
-    height: 70vh;
-}
-
-.bigContainer {
-    display: flex;
-    flex-direction: column;
-
-}
-
-.reglement {
-    width: 30%;
-    margin-left: 3em;
-}
-
-.containerTeam {
-    display: flex;
-    flex-direction: column;
-
-}
-
-.containerTeam1 {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    gap: 3em;
-}
-
-.containerTeam2 {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    gap: 3em;
-}
-
-.containerTeam2 img {
-    margin: 0 auto;
-    width: 5em;
-}
-
-
-
-
 .container .button {
     display: flex;
     justify-content: flex-end;
@@ -321,6 +276,64 @@ h4 {
     position: absolute;
     left: 45%;
     top: 20%;
+}
+
+.team {
+    height: auto;
+    padding-top: 14vh;
+}
+
+.reglement {
+    border: solid 4px white;
+    width: 18rem;
+    height: 23rem;
+    margin: 0 auto;
+    border-radius: 1em;
+    box-shadow: 5px 5px 30px #8B8686,
+        -5px -5px 30px #7A7575;
+}
+
+.bigContainer {
+    height: 100%;
+}
+
+.reglement div {
+    height: 100%;
+    padding: 1em;
+    border: solid 10px var(--primary);
+    border-radius: 1em;
+    background: rgb(246, 237, 222);
+}
+
+form {
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+}
+
+.containerTeam {
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+    gap: 2em;
+}
+
+.containerTeam1 {
+    text-align: center;
+}
+
+.containerTeam2 {
+    text-align: center;
+}
+
+.containerTeam1 img {
+    margin-top: 1em;
+    width: 4em;
+}
+
+.containerTeam2 img {
+    margin-top: 1em;
+    width: 5em;
 }
 
 
