--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ header {
     margin: 10px;
     border-radius: 50% 20% / 10% 40%;
     background-color: rgb(0, 26, 255);
+    cursor: pointer;
 }
 
 .rightAnswer {
@@ -186,6 +187,7 @@ header {
     margin: 10px;
     border-radius: 50% 20% / 10% 40%;
     background-color: rgb(0, 26, 255);
+    cursor: pointer;
 }
 
 .cont-btn {
