--- a/style.css
+++ b/style.css
@@ -24,11 +24,6 @@ html {
     height: 10vh;
     display: flex;
     justify-content: center;
-    align-items: center;
-
-    background: var(--primary);
-    height: 100vh;
-
 }
 
 .header div a{
@@ -54,28 +49,22 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 5em;
+    gap: 1em;
     background: var(--primary);
     height: 100vh;
-    padding-top: 4em;
+    padding-top: 8em;
 }
-
-
 
 
 .container a{
     display: flex;
     flex-direction: column;
     align-items: center;
-
     gap: 0.5em;
     color: var(--secondary);
     text-decoration: none;
     font-size: 1.4em;
     font-weight: 900;
-
-    margin-top: 6em;
-
 }
 
 .container ion-icon{
@@ -88,6 +77,7 @@ html {
     overflow-y: hidden;
     align-items: center;
 }
+
 .bigTitle {
     font-family: 'Lato', sans-serif;
     font-size: clamp(2.5rem, 10vw, 7rem);
@@ -112,7 +102,6 @@ html {
 
 
 .team {
-    height: auto;
     padding-top: 14vh; 
 
 }
@@ -120,7 +109,7 @@ html {
 .reglement {
     border: solid 4px white;
     width: 18rem;
-    height: 23rem;
+    height: 23em;
     margin: 0 auto;
     border-radius: 1em;
     box-shadow:  5px 5px 30px #8b8686,
@@ -212,4 +201,17 @@ justify-content: center;
     }
 
 
+}
+
+.modal{
+    display: none;
+
+}
+
+.classModal{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    border: black solid 1px;
+    padding: 2em;
 }
