--- a/style.css
+++ b/style.css
@@ -182,6 +182,14 @@ header {
     cursor: pointer;
 }
 
+.wrongAnswer::selection {
+    padding: 50px;
+    margin: 10px;
+    border-radius: 50% 20% / 10% 40%;
+    background-color: rgb(255, 0, 0);
+    cursor: pointer;
+}
+
 .rightAnswer {
     padding: 50px;
     margin: 10px;
