--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ html {
 
 .quizz1 {
     height: 100vh;
+    margin-bottom: 3rem;
     margin-top: 3rem;
 
 }
@@ -244,14 +245,37 @@ h4 {
 
 }
 
+.macaron img {
+
+    width: 20vw;
+    height: 10vh;
+}
+
+.scoremacaron {
+    font-size: 110%;
+    color: rgb(236, 11, 11);
+    position: absolute;
+    left: 45%;
+    top: 20%;
+}
+
+
 .container .button {
     display: flex;
     height: 100vh;
 }
 
 
+.containerTirage {
+    height: 100vh;
+    margin-bottom: 5rem;
+}
+
 .bigContainer {
-    height: 100%;
+    height: 100vh;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
+    
 }
 
 
@@ -262,6 +286,9 @@ h4 {
     border: solid 10px var(--primary);
     border-radius: 1em;
     background: rgb(246, 237, 222);
+    margin-top: 3rem;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 
@@ -276,7 +303,9 @@ form {
     display: flex;
     justify-content: center;
     gap: 2em;
+    margin-bottom: 3rem;
 }
+
 
 .containerTeam1 {
     text-align: center;
@@ -295,6 +324,23 @@ form {
 .containerTeam2 img {
     margin-top: 1em;
     width: 5em;
+}
+
+.modal {
+    display: none;
+
+}
+
+.team {
+    margin-bottom: 3rem;
+}
+
+.classModal {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    border: black solid 1px;
+    padding: 2em;
 }
 
 
@@ -334,6 +380,8 @@ form {
         justify-content: flex-start;
         align-items: center;
         gap: 15em;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
     }
 
     .containerTeam {
@@ -344,17 +392,4 @@ form {
     }
 
 
-}
-
-.modal {
-    display: none;
-
-}
-
-.classModal {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    border: black solid 1px;
-    padding: 2em;
 }
