--- a/style.css
+++ b/style.css
@@ -106,6 +106,68 @@ html {
     }
 }
 
+.reglement {
+
+    height: 100vh;
+    padding: 1em;
+    border: solid 10px var(--primary);
+    border-radius: 1em;
+    background: rgb(246, 237, 222);
+    margin-top: 3rem;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+
+form {
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+}
+
+.team {
+    height: 100vh;
+
+}
+
+.containerTeam {
+
+    display: flex;
+    justify-content: center;
+
+
+}
+
+
+.containerTeam1 {
+    text-align: center;
+}
+
+
+.containerTeam2 {
+    text-align: center;
+}
+
+
+.modal {
+    display: none;
+
+}
+
+
+.classModal {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    border: black solid 1px;
+    padding: 2em;
+}
+
+
+
+
+
+
 
 
 .quizz1 {
@@ -266,82 +328,6 @@ h4 {
 }
 
 
-.containerTirage {
-    height: 100vh;
-    margin-bottom: 5rem;
-}
-
-.bigContainer {
-    height: 100vh;
-    margin-bottom: 3rem;
-    margin-top: 3rem;
-    
-}
-
-
-.reglement div {
-
-    height: 100%;
-    padding: 1em;
-    border: solid 10px var(--primary);
-    border-radius: 1em;
-    background: rgb(246, 237, 222);
-    margin-top: 3rem;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
-
-form {
-    margin-top: 2em;
-    display: flex;
-    justify-content: center;
-}
-
-.containerTeam {
-    margin-top: 2em;
-    display: flex;
-    justify-content: center;
-    gap: 2em;
-    margin-bottom: 3rem;
-}
-
-
-.containerTeam1 {
-    text-align: center;
-}
-
-
-.containerTeam2 {
-    text-align: center;
-}
-
-.containerTeam1 img {
-    margin-top: 1em;
-    width: 4em;
-}
-
-.containerTeam2 img {
-    margin-top: 1em;
-    width: 5em;
-}
-
-.modal {
-    display: none;
-
-}
-
-.team {
-    margin-bottom: 3rem;
-}
-
-.classModal {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    border: black solid 1px;
-    padding: 2em;
-}
 
 
 @media screen and (min-width: 768px) {
