css et responsive

--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ html {
     box-sizing: border-box;
 }
 
+body {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
+}
+
 .header {
     width: 100%;
     position: fixed;
@@ -26,6 +32,7 @@ html {
     height: 10vh;
     display: flex;
     justify-content: center;
+
 }
 
 
@@ -55,8 +62,9 @@ html {
     gap: 1em;
     background: var(--primary);
     height: 100vh;
+    grid-row-start: 0;
+    grid-row-end: 1;
 
-    padding-top: 8em;
 }
 
 
@@ -113,9 +121,10 @@ html {
     border: solid 10px var(--primary);
     border-radius: 1em;
     background: rgb(246, 237, 222);
-    margin-top: 3rem;
     margin-left: 10%;
     margin-right: 10%;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 
 
@@ -127,6 +136,8 @@ form {
 
 .team {
     height: 100vh;
+    grid-row-start: 2;
+    grid-row-end: 3;
 
 }
 
@@ -172,8 +183,8 @@ form {
 
 .quizz1 {
     height: 100vh;
-    margin-bottom: 3rem;
-    margin-top: 3rem;
+    grid-row-start: 3;
+    grid-row-end: 4;
 
 }
 
@@ -211,6 +222,8 @@ h4 {
 .quizz2 {
     height: 100vh;
     margin-top: 3rem;
+    grid-row-start: 4;
+    grid-row-end: 5;
 }
 
 .diapo1-wild {
@@ -240,6 +253,8 @@ h4 {
 .questionMort {
     height: 100vh;
     margin-top: 3rem;
+    grid-row-start: 5;
+    grid-row-end: 6;
 }
 
 .questionfinal {
@@ -377,5 +392,57 @@ h4 {
         flex-direction: row;
     }
 
+    .diapo1 {
+        display: grid;
+        height: 60vh;
+        grid-template-rows: 1fr, 1fr, 1fr;
+        grid-template-columns: 1fr, 1fr;
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+
+    .diapo1-wild {
+        display: grid;
+        height: 60vh;
+        grid-template-rows: 1fr, 1fr, 1fr;
+        grid-template-columns: 1fr, 1fr;
+        margin-left: 5rem;
+        margin-right: 5rem;
+
+    }
+
+    .questionfinal {
+        height: 60vh;
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+
+    .footer {
+        height: 12vh;
+    }
+
+    .macaron img {
+
+        width: 7vw;
+        height: 7vh;
+    }
+
+    .macaron {
+        position: absolute;
+        left: 80%;
+        top: 10%;
+
+    }
+
+    .cannele {
+        position: absolute;
+        top: 10%;
+    }
+
+    .cannele img {
+
+        width: 7vw;
+        height: 7vh;
+    }
 
 }
