--- a/style.css
+++ b/style.css
@@ -437,7 +437,16 @@ h4 {
     cursor: pointer;
 }
 
-@media screen and (min-width: 768px) {
+.winner {
+    color: white;
+}
+
+.loser {
+    color: white;
+}
+
+
+@media screen and (min-width: 500px) {
 
 
     .diapo1 {
@@ -513,6 +522,36 @@ h4 {
         gap: 2em;
     }
 
+    /* slide */
+    /* media screen */
+    .fullAnswer {
+        display: grid;
+        /* align-items: center; */
+        /* justify-content: center;
+        flex-direction: column; */
+        /* grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr); */
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        border: 1px solid rgb(0, 252, 13);
+        text-align: center;
+    }
+
+    /* media screen */
+    .wrongAnswer {
+        padding: 50px;
+        margin: 10px;
+        border-radius: 50% 20% / 10% 40%;
+        background-color: rgb(0, 26, 255);
+    }
+
+    /* media screen */
+    .rightAnswer {
+        padding: 50px;
+        margin: 10px;
+        border-radius: 50% 20% / 10% 40%;
+        background-color: rgb(0, 26, 255);
+    }
 }
 
 
@@ -594,35 +633,4 @@ h4 {
 #btnWin:active {
     transform: translateY(3px);
     box-shadow: 0 5px #212967;
-}
-
-/* slide */
-/* media screen */
-.fullAnswer {
-    display: grid;
-    /* align-items: center; */
-    /* justify-content: center;
-        flex-direction: column; */
-    /* grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 1fr); */
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    border: 1px solid rgb(0, 252, 13);
-    text-align: center;
-}
-
-/* media screen */
-.wrongAnswer {
-    padding: 50px;
-    margin: 10px;
-    border-radius: 50% 20% / 10% 40%;
-    background-color: rgb(0, 26, 255);
-}
-
-/* media screen */
-.rightAnswer {
-    padding: 50px;
-    margin: 10px;
-    border-radius: 50% 20% / 10% 40%;
-    background-color: rgb(0, 26, 255);
 }
