--- a/style.css
+++ b/style.css
@@ -112,7 +112,6 @@ html {
 /* choose team */
 .team {
     padding-top: 20vh;
-    height: auto; 
 }
 
 .bigContainer{
@@ -133,7 +132,6 @@ html {
 }
 
 .containerCard{
-    height: 100%;
     padding: 1em;
     padding-top: 2em;
     border-radius: 1em;
@@ -216,7 +214,7 @@ html {
     }
     .container {
         padding-top: initial;
-        gap: 10em;
+        gap: 6em;
     }
     .container a{
         font-size: 2.5em;
@@ -254,16 +252,6 @@ html {
     align-items: center;
 }
 
-.footer {
-    background: #131734;
-    display: none;
-    bottom: 0;
-}
-
-.footer.scroll1{
-    display: block;
-    position: fixed;
-}
 
 .classModal h3{
     margin-top: 1em;
@@ -273,6 +261,22 @@ html {
 
 .classModal img{
     width: 25rem;
+}
+
+.footer {
+    background: #131734;
+    display: none;
+    bottom: 0;
+    width: 100%;
+}
+
+.footer.scroll1{
+    display: block;
+    position: fixed;
+}
+
+.footer img{
+    width: 1em;
 }
 
 #btnClose{
@@ -325,3 +329,118 @@ html {
     transform: translateY(3px);
     box-shadow: 0 5px #212967;
 }
+
+
+
+.quizz1 {
+    height: 100vh;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    margin-top: 10vh;
+}
+
+
+.slider{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+}
+
+.fullAnswer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    box-shadow:  10px 10px 25px 10px rgba(0, 0, 0, 0.361);
+    border: 3px solid rgba(255, 255, 255, 0.724);
+    background: var(--primary);
+    border-radius: 0.8em;
+    padding: 0.5em;
+}
+
+
+
+.fullAnswer img{
+    width: 40%;
+}
+
+.fullAnswer img:nth-child(1){
+    width: 70%;
+}
+
+.wrongAnswerRed {
+    background-color: rgb(255, 0, 0);
+    cursor: pointer;
+}
+
+.question{
+    width: 100%;
+}
+
+.question h2{
+    text-align: center;
+    font-size: 1.7em;
+    padding-bottom: 3vh;
+}
+
+.question h2:hover{
+    text-decoration: underline;
+}
+
+.fullAnswer h3{
+    cursor: pointer;
+    width: 90%;
+    text-align: center;
+    color: var(--secondary);
+    font-size: 1.3em;
+    border: 2px solid yellow;
+    padding: 0.5em;
+    border-radius: 1em;
+    margin-top: 0.6em;
+    cursor: pointer;
+}
+
+.fullAnswer h3:nth-child(4){
+    margin-bottom: 0.6em;
+}
+
+
+.fullAnswer h3:hover{
+   background: #00ddff;
+}
+
+.fullAnswer h3:nth-child(1){
+    border: 2px solid orange;
+}
+
+.fullAnswer h3:nth-child(3){
+    border: 2px solid violet;
+}
+
+.fullAnswer h3:nth-child(4){
+    border: 2px solid rgb(7, 131, 40);
+}
+.rightAnswerGreen {
+    background-color: rgb(9, 255, 0);
+    cursor: pointer;
+}
+
+.cont-btn {
+    align-items: center;
+}
+
+.btn-nav {
+    font-size: 50px;
+    cursor: pointer;
+    
+}
+
+.cont-btn ion-icon{
+    font-size: 1.5em;
+    color: var(--primary);
+}
+
+
+
